--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
     "styled-components": "^5.3.8",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/styled-components": "^5.1.26"
   }
 }
