--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/recoil": "^0.0.9",
     "antd": "^5.3.0",
     "axios": "^1.3.4",
     "eslint": "8.35.0",
@@ -21,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use": "^17.4.0",
+    "recoil": "^0.7.7",
     "styled-components": "^5.3.8",
     "typescript": "4.9.5"
   },
