--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.21.0",
     "@types/axios": "^0.14.0",
     "@types/styled-components": "^5.1.26",
-    "babel-loader": "^9.1.2"
+    "babel-loader": "^9.1.2",
+    "eslint-plugin-import": "^2.27.5"
   }
 }
