--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/recoil": "^0.0.9",
     "antd": "^5.3.0",
     "axios": "^1.3.4",
+    "babel-plugin-import": "^1.13.6",
     "dayjs": "^1.11.7",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
