--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,10 @@
   "presets": ["next/babel"],
   "plugins": [
     ["import", { "libraryName": "antd", "style": true }],
-    ["@babel/plugin-transform-runtime", { "regenerator": true }]
+    ["@babel/plugin-transform-runtime", { "regenerator": true }],
+    ["@babel/plugin-transform-modules-commonjs", {
+      "strictMode": false,
+      "allowTopLevelThis": true
+    }]
   ]
 }
